# ai_visibility

./: .dockerignore  .env.example  .pre-commit-config.yaml  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
alembic/: alembic.ini  env.py
alembic/versions/: 20260616_0924_initial_foundation.py  20260616_2018_model_registry_created_at.py
apps/: __init__.py  service_runner.py
apps/config_service/: __init__.py
apps/config_service/app/: __init__.py  main.py
apps/insights_service/: __init__.py
apps/insights_service/app/: __init__.py  main.py
apps/shared/: __init__.py
apps/shared/ai/: __init__.py  credentials.py  idempotency.py  model_discovery.py  openai_provider.py  provider.py  rate_limits.py  secrets.py
apps/shared/db/: __init__.py  runtime.py
apps/shared/http/: __init__.py  cors.py
apps/shared/runtime/: env.py
apps/shared/schemas/: __init__.py  common.py
apps/visibility_service/: __init__.py
apps/visibility_service/app/: __init__.py  main.py
apps/web/: cypress.config.ts  index.html  package-lock.json  package.json
contracts/: README.md  database.sql  enums.md  openapi.yaml
docs/decisions/: architecture.md
docs/demo/: demo.md  main-flow.md  system-architecture.md  technical-implementation.md
docs/workflows/: contract-workflow.md
infra/docker/: python-service.Dockerfile
openspec/: README.md  config.yaml
scripts/: check_skeleton.py  run_web_check.py  run_web_e2e.py
scripts/ai_visibility_tools/: __init__.py  cli_tasks.py  demo_check.py  demo_e2e.py
tests/integration/: README.md  db_helpers.py  test_config_service_postgres.py  test_insights_service_postgres.py  test_visibility_service_postgres.py  test_visibility_worker_postgres.py
tests/services/: __init__.py  test_config_service_api.py  test_contract_files.py  test_cors.py  test_demo_e2e.py  test_insights_service_api.py  test_visibility_service_api.py  test_visibility_worker.py
tests/unit/: test_db_reset_safety.py  test_demo_check.py  test_idempotency.py  test_insights_extractor.py  test_openai_model_discovery.py  test_openai_provider_adapter.py  test_provider_adapter.py  test_rate_limits.py  test_runtime_env.py  test_secrets.py  test_worker_runtime.py
(+253 files in other folders)
